log4j instead of console logging